--- a/dashboards/office.erb
+++ b/dashboards/office.erb
@@ -1,7 +1,7 @@
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="breaks" data-view="Breaks"></div>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="2">
+      <div data-id="breaks" data-view="Breaks" data-addclass-danger="isTooHigh" data-addclass-done="farTooHigh"></div>
     </li>
   </ul>
 </div>
